--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 tensor-algebra-systems-src/
 tensor-algebra-systems-lib/
+bench-scripts/blockedSparse_4T/result/
+bench-scripts/gemv/result/
+bench-scripts/spmv/result/
+bench-scripts/sddmm_varSparsity/result/
+bench-scripts/blockedSparse_4T_5/result/
+bench-scripts/mmadd/result/
+bench-scripts/sddmm/result/
+bench-scripts/ttv/result/
