--- a/bench-scripts/Makefile
+++ b/bench-scripts/Makefile
@@ -1,7 +1,10 @@
 SHELL := /bin/bash
 
 
-all: kick-tires
+all: run-tblis-tests
+
+run-tblis-tests:
+	$(PATH_TO_MOSAIC_ARTIFACT)/mosaic/build/bin/taco-test tblis
 
 all-benchmarks: run-fig13 draw-fig13 run-fig14 draw-fig14 run-fig15 draw-fig15 \
 	 run-fig14 draw-fig14 run-fig16 draw-fig16 run-fig17 draw-fig17 \
@@ -13,17 +16,16 @@ kick-tires: run-unit-test run-fig18 draw-fig18
 run-unit-test:
 	$(PATH_TO_MOSAIC_ARTIFACT)/mosaic/build/bin/taco-test interface
 
-
 # Each of these scripts inlcudes a list of systems that the benchmark runs in.
 # Please change the list of systems to correspond with the systems that are
 # currently downloaded on your computer.
 
 
 run-fig13:
-	/gemv/bench.sh
+	./gemv/bench.sh
 
 run-fig14:
-	/symmgemv/bench.sh
+	./symmgemv/bench.sh
 
 run-fig15:
 	./spmv/bench.sh
